<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminMainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@android:dimen/app_icon_size"
        />

    <Button
        android:id="@+id/btnAdminSet"
        android:onClick="btnAdminSetOnClick"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:text="@string/admin_set"
        android:textSize="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnAppLockSet"
        android:onClick="btnAppLockSetOnClick"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:text="@string/app_lock_onoff"
        android:textSize="20dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/btnDB"
        android:onClick="btnDBOnClick"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:text="@string/database_test"
        android:textSize="20dp"
        android:layout_gravity="center" />

</LinearLayout>