<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@android:dimen/app_icon_size"
        />

    <Button
        android:id="@+id/btnAdmin"
        android:onClick="btnAdminOnClick"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textSize="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnUser"
        android:onClick="btnUserOnClick"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="20dp"
        android:layout_gravity="center" />
</LinearLayout>